<resources>
    <string name="app_name">UniChef</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="settings_delete_account">Delete Account</string>

    <string name="settings_account"><b>Account</b></string>
    <string name="settings_title_notifications"><b>Notifications</b></string>
    <string name="settings_title_help"><b>Support</b></string>
    <string name="settings_title_about"><b>About</b></string>
    <string name="settings_private_account">Private Account</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_change_email">Change Email</string>
    <string name="settings_get_help">Log Out</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_code_of_conduct">Code of Conduct</string>


    <string name="settings_app_notifications">Receive notifications</string>
    <string name="settings_email_notifications">Receive Email Updates</string>

    <string-array name="tags">
        <item>"test"</item>
        <item>"test"</item>
        <item>"test"</item>
        <item>"test"</item>
        <item>"test"</item>
        <item>"test"</item>
        <item>"test"</item>
        <item>"test"</item>
    </string-array>
    <string name="next">Next</string>
    <string name="name_your_recipe">Name Your Recipe</string>
    <string name="name_of_recipe">Name of Recipe</string>
    <string name="add_photo">Add Photo</string>
    <string name="portion_size">Portion Size</string>
    <string name="difficulty">Difficulty</string>
    <string name="prep_time">Prep Time</string>
    <string name="minutes">Minutes</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="method">Method</string>
    <string name="tags">Tags</string>
    <string name="preview">Preview</string>
    <string name="finish">Finish</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="Title">Title of Recipe</string>
    <string name="other_details">Other details about recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_recipe">New Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredient">add ingredient</string>
    <string name="description">Description</string>
    <string name="equipment">Equipment</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="add_tag">Add Tag</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="tips">Tips</string>
    <string name="title">Title</string>

    <string name="tips_title"><b><u>Tips</u></b></string>

    <string-array name = "tipsArray">
        <item>"Al dente = the moment when pasta is JUST cooked!"</item>
        <item>"Always wash your produce and hands before cooking!"</item>
        <item>"You can't cook chicken to be medium rare! It's either poisonous, cooked or sand!"</item>
        <item>"Be careful when seasoning with salt. You can always add, but it's harder to take out!</item>
        <item>"Always taste-test your food when seasoning, whether it's with salt or pepper. You won't know whether it's good without doing so!</item>
        <item>"Red onions can be substituted for yellow onions and vice-versa.</item>
        <item>"Don't chop both veggies and meat on one chopping board! Cross-contamination!"</item>
        <item>"Let the knife do all the work!"</item>
        <item>"Use a little bit of spare pasta water in your pasta sauce!"</item>
        <item>"When slicing an onion, keep the root intact!"</item>
        <item>"Added too much salt to your sauce? Add a quartered potato to absorb some of the excess!"</item>
        <item>"Read recipes the whole way through before you start; no-one wants to stop cooking because they forgot to dice an ingredient!"</item>
        <item>"Make sure you rotate your pan so that the handle is out of the way: this reduces the chance of knocking it over!"</item>
        <item>"Remember: better safe than sorry!"</item>
        <item>"If you get bored of spaghetti , you can always try the same recipe with different types of pasta!</item>
        <item>"Take advantage of leftovers!"</item>
        <item>"Plan ahead!"</item>
        <item>"Toasting burger buns can take your burger to the next level!"</item>
        <item>"When making lasagne you may have some leftovers. You could share it with your flat or store it in the fridge/freezer!"</item>
    </string-array>
</resources>