<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_uploadRecipeActivty"
        android:icon="@drawable/ic_add"
        android:title="@string/new_recipe" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account_icon"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/navigation_tips"
        android:icon="@drawable/tips_icon"
        android:title="@string/tips"/>

</menu>