<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="134dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/settings_title_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18dp"
            android:text="@string/settings_account" />

        <Switch
            android:id="@+id/settings_switch_private_account"
            android:layout_centerInParent="true"
            android:layout_below="@+id/settings_title_account"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white"
            android:text="@string/settings_private_account" />

        <Button
            android:id="@+id/settings_change_password"
            android:layout_below="@+id/settings_switch_private_account"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:theme="@style/settings_button_white"
            android:padding="2dp"
            android:text="@string/settings_change_password" />

        <Button
            android:id="@+id/settings_change_email"
            android:layout_below="@+id/settings_change_password"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:theme="@style/settings_button_white"
            android:padding="2dp"
            android:text="@string/settings_change_email" />

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="2dp">
            <TextView
                android:id="@+id/settings_title_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp"
                android:text="@string/settings_title_notifications" />

            <Switch
                android:id="@+id/settings_app_notifications"
                android:layout_centerInParent="true"
                android:layout_below="@+id/settings_title_notifications"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:text="@string/settings_app_notifications" />

            <Switch
                android:id="@+id/settings_email_notifications"
                android:layout_centerInParent="true"
                android:layout_below="@+id/settings_app_notifications"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/white"
                android:text="@string/settings_email_notifications" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/settings_title_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp"
                android:text="@string/settings_title_about" />

            <Button
                android:id="@+id/settings_privacy_policy"
                android:layout_below="@+id/settings_title_about"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:theme="@style/settings_button_white"
                android:padding="2dp"
                android:text="@string/settings_privacy_policy" />

            <Button
                android:id="@+id/settings_code_of_conduct"
                android:layout_below="@+id/settings_privacy_policy"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:theme="@style/settings_button_white"
                android:padding="2dp"
                android:text="@string/settings_code_of_conduct" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">
            <TextView
                android:id="@+id/settings_title_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp"
                android:text="@string/settings_title_help" />

            <Button
                android:id="@+id/settings_help_button"
                android:layout_below="@+id/settings_title_help"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:theme="@style/settings_button_white"
                android:padding="2dp"
                android:text="@string/settings_get_help" />

            <Button
                android:id="@+id/settings_delete_account"
                android:layout_below="@+id/settings_help_button"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:theme="@style/settings_button_white"
                android:padding="2dp"
                android:text="@string/settings_delete_account" />
        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>